--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.6.3",
     "react-to-print": "^3.1.1",
+    "recharts": "^3.1.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
